--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 	</head>
 	<body>
- 		<iframe SRC="http://tamaskan-dog.org/forum/"></iframe>
+ 		<iframe SRC="http://tamaskan-dog.org/forum/forum.php"></iframe>
 
 	</body>
 </html>
