--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <!doctype html>
-<html>
-	<head>
-		<meta name="BTC Forum" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-		<title>BTC Forum</title>
-		
-	</head>
-	<body>
- 		<iframe SRC="http://tamaskan-dog.org/forum/forum.php"></iframe>
-
-	</body>
-</html>
+<?php
+include 'http://tamaskan-dog.org.uk/forum/forum.php';
+?>
