--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
-<?php
-include 'http://tamaskan-dog.org.uk/forum/forum.php';
-?>
+<html>
+  <head>
+		<meta name="BTC Forum" content="initial-scale=1.0, user-scalable=no, width=device-width" />
+		<title>BTC Forum</title>
+	</head>
+
+ 	<frameset cols="100%">
+	<frame src="http://tamaskan-dog.org.uk/forum">
+	</frameset>
+	
+</html>
